--- a/Bootstrap (C.W.H)/index.html
+++ b/Bootstrap (C.W.H)/index.html
@@ -17,7 +17,7 @@
 
   <!-- This block for navbar (start) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Shree hari</a>
+    <a class="navbar-brand" href="/shreeharibootstrap/">Shree hari</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="shreeharibootstrap/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Events</a>
@@ -47,10 +47,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About Us</a>
+          <a class="nav-link" href="/shreeharibootstrap/about.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="/shreeharibootstrap/contact.html">Contact Us</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -219,11 +219,11 @@
   <!--Footer start-->
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="/shreeharibootstrap/index.html" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Events</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Image gallery</a></li>
-      <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About us</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact us</a></li>
+      <li class="nav-item"><a href="/shreeharibootstrap/about.html" class="nav-link px-2 text-muted">About us</a></li>
+      <li class="nav-item"><a href="/shreeharibootstrap/contact.html" class="nav-link px-2 text-muted">Contact us</a></li>
     </ul>
     <p class="text-center text-muted">© 2022 Company, Inc</p>
   </footer>
